# spanish-tile-inventory

./: .gitignore  2024-07-08-inventory-with-lat-long.csv  Cargo.toml  Dockerfile  README.md  consolidate.sh  inventory.csv  inventory_latlong.csv  inventory_modified.csv
.github/scripts/: build.sh  push.sh
.github/workflows/: build-and-deploy.yml  cron.yml
app/: Cargo.toml
app/src/: lib.rs
components/: Cargo.toml
components/src/: analysis_display.rs  js_bindings.rs  lib.rs  map_view.rs
data/: Cargo.toml
data/src/: analysis.rs  inventory.rs  lib.rs
lat-long-finder/: Cargo.toml
lat-long-finder/src/: main.rs
spanish-tiles-nola/: Cargo.toml  index.html
spanish-tiles-nola/src/: main.rs
static/: style.css
utils/: Cargo.toml
utils/src/: csv_parser.rs  lib.rs
web/: Cargo.toml  geosearch.js  index.html
web/src/: main.rs
