[workspace]
resolver = "2"
members = [
    # "utils",
    "data",
    "components",
    "app",
    "web", 
    "lat-long-finder"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
csv = "1.3"
gloo-console = "0.2"
gloo-net = "0.2"
js-sys = "0.3"
leaflet = "0.4"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
structopt = "0.3"
thiserror = { version = "1.0" }
tokio = { version = "1.38", features = ["full"] }
urlencoding = "2.1.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "MouseEvent",
    "Node",
    "Window",
] }
yew = { version = "0.20", features = ["csr"] }
