[workspace]
resolver = "2"
members = [
    "app",
    "components",
    "data",
    "lat-long-finder",
    "spanish-tiles-nola", 
    "utils"
    ]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
chrono = "0.4.38"
csv = "1.3"
gloo-console = "0.3"
gloo-net = "0.5"
js-sys = "0.3"
leaflet = "0.4"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
structopt = "0.3"
thiserror = { version = "1.0" }
tokio = { version = "1.38", features = ["full"] }
urlencoding = "2.1.3"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "MouseEvent",
    "Node",
    "Window",
] }
yew = { version = "0.21", features = ["csr"] }


[profile.release]
debug = true
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
# lto = true
incremental = true
panic = "unwind"
strip = "none"
