[package]
name = "components"
version.workspace = true
edition = "2021"

[dependencies]
data = { path = "../data" }
js-sys = { workspace = true }
leaflet = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true }