[package]
name = "components"
version.workspace = true
edition = "2021"

[dependencies]
data = { path = "../data" }
gloo-console = { workspace = true }
js-sys = { workspace = true }
leaflet = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true }