[package]
name = "utils"
version.workspace = true
edition = "2021"

[dependencies]
csv = { workspace = true }
data = { path = "../data" }
reqwest = { workspace = true, features=["blocking"] }
serde = { workspace=true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }