[package]
name = "utils"
version.workspace = true
edition = "2021"

[features]
default = []
no-wasm = ["reqwest", "tokio", "urlencoding"]

[dependencies]
csv = { workspace = true }
data = { path = "../data" }
serde = { workspace = true }
thiserror = { workspace = true }

# Optional dependencies for no-wasm feature
reqwest = { workspace = true, features = ["json"], optional = true }
tokio = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }